--- a/index.html
+++ b/index.html
@@ -7,62 +7,69 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
+  <!--Importing Google font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <main>
-    <section class="rating_card">
+
+    <div class="card">
       <!-- Rating state start -->
-      <img src="images/icon-star.svg" alt="star icon">
-      <h1>
-        How did we do?
-      </h1>
+      <section class="rating_card">
+        <img src="images/icon-star.svg" alt="star icon">
+        <h1 class="big_txt">
+          How did we do?
+        </h1>
 
-      <h2>
-        Please let us know how we did with your support request. All feedback is appreciated 
-        to help us improve our offering!
-      </h2>
+        <h2 class="normal_txt">
+          Please let us know how we did with your support request. All feedback is appreciated 
+          to help us improve our offering!
+        </h2>
 
-      <menu>
-        <li>
-          <button>1</button>
-        </li>
-        <li>
-          <button>2</button>
-        </li>
-        <li>
-          <button>3</button>
-        </li>
-        <li>
-          <button>4</button>
-        </li>
-        <li>
-          <button>5</button>
-        </li>
-        <li>
-          <input type="submit" value="SUBMIT">
-        </li>
-      </menu>
-
-      
-      
+        <menu>
+          <li>
+            <button class="button_txt">1</button>
+          </li>
+          <li>
+            <button class="button_txt">2</button>
+          </li>
+          <li>
+            <button class="button_txt">3</button>
+          </li>
+          <li>
+            <button class="button_txt">4</button>
+          </li>
+          <li>
+            <button class="button_txt">5</button>
+          </li>
+          <li class="submit_button">
+            <input class="button_txt" type="submit" value="SUBMIT">
+          </li>
+        </menu>
+      </section>
       <!-- Rating state end -->
 
       <!-- Thank you state start -->
-      <section class="thankU_card">
-        <!--
+      <section class="thank_u_card">
         <img src="images/illustration-thank-you.svg" alt="phone with a form coming out of it">
-        <p>You selected  Add rating here  out of 5</p>
-        <p>Thank you!
-
+        <p class="orange_txt">
+          You selected  <!--Add rating here-->  out of 5
+        </p>
+        <p class="big_txt">Thank you!</p>
+        <p class="normal_txt">
           We appreciate you taking the time to give a rating. If you ever need more support, 
           don’t hesitate to get in touch!
         </p>
-        Thank you state end 
-        -->
       </section>
+      <!--Thank you state end-->
+    </div>
 
-    </section>
   </main>
 
 </body>
