added more style

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="card">
       <!-- Rating state start -->
       <section class="rating_card">
-        <img src="images/icon-star.svg" alt="star icon">
+        <img class="star_icon" src="images/icon-star.svg" alt="star icon">
         <h1 class="big_txt">
           How did we do?
         </h1>
@@ -33,23 +33,23 @@
         </h2>
 
         <menu>
-          <li>
+          <li class="button_list">
             <button class="button_txt">1</button>
           </li>
-          <li>
+          <li class="button_list">
             <button class="button_txt">2</button>
           </li>
-          <li>
+          <li class="button_list">
             <button class="button_txt">3</button>
           </li>
-          <li>
+          <li class="button_list">
             <button class="button_txt">4</button>
           </li>
-          <li>
+          <li class="button_list">
             <button class="button_txt">5</button>
           </li>
-          <li class="submit_button">
-            <input class="button_txt" type="submit" value="SUBMIT">
+          <li class="submit_button_list">
+            <input class="submit_button" type="submit" value="SUBMIT">
           </li>
         </menu>
       </section>
