changed buttons to radio inputs

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <title>Interactive rating component</title>
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <!--Importing Google font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +17,7 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <main>
@@ -28,29 +31,43 @@
         </h1>
 
         <h2 class="normal_txt">
-          Please let us know how we did with your support request. All feedback is appreciated 
+          Please let us know how we did with your support request. All feedback is appreciated
           to help us improve our offering!
         </h2>
 
         <menu>
-          <li class="button_list">
-            <button class="button_txt">1</button>
-          </li>
-          <li class="button_list">
-            <button class="button_txt">2</button>
-          </li>
-          <li class="button_list">
-            <button class="button_txt">3</button>
-          </li>
-          <li class="button_list">
-            <button class="button_txt">4</button>
-          </li>
-          <li class="button_list">
-            <button class="button_txt">5</button>
-          </li>
-          <li class="submit_button_list">
-            <input class="submit_button" type="submit" value="SUBMIT">
-          </li>
+
+          <form>
+            <li class="button_list">
+              <input class="button_input" type="radio" id="n1" name="rating" value="1">
+              <label class="button_label" for="n1">1</label>
+              <!-- <button class="button_txt">1</button> -->
+            </li>
+            <li class="button_list">
+              <input class="button_input" type="radio" id="n2" name="rating" value="2">
+              <label class="button_label" for="n2">2</label>
+              <!-- <button class="button_txt">2</button> -->
+            </li>
+            <li class="button_list">
+              <input class="button_input" type="radio" id="n3" name="rating" value="3">
+              <label class="button_label" for="n3">3</label>
+              <!-- <button class="button_txt">3</button> -->
+            </li>
+            <li class="button_list">
+              <input class="button_input" type="radio" id="n4" name="rating" value="4">
+              <label class="button_label" for="n4">4</label>
+              <!-- <button class="button_txt">4</button> -->
+            </li>
+            <li class="button_list">
+              <input class="button_input" type="radio" id="n5" name="rating" value="5">
+              <label class="button_label" for="n5">5</label>
+              <!-- <button class="button_txt">5</button> -->
+            </li>
+            <li class="submit_button_list">
+              <input class="submit_button" type="submit" value="SUBMIT" onclick="submit_validation()">
+            </li>
+          </form>
+
         </menu>
       </section>
       <!-- Rating state end -->
@@ -59,11 +76,11 @@
       <section class="thank_u_card">
         <img src="images/illustration-thank-you.svg" alt="phone with a form coming out of it">
         <p class="orange_txt">
-          You selected  <!--Add rating here-->  out of 5
+          You selected <!--Add rating here--> out of 5
         </p>
         <p class="big_txt">Thank you!</p>
         <p class="normal_txt">
-          We appreciate you taking the time to give a rating. If you ever need more support, 
+          We appreciate you taking the time to give a rating. If you ever need more support,
           don’t hesitate to get in touch!
         </p>
       </section>
@@ -72,5 +89,7 @@
 
   </main>
 
+  <script src="submit_validation.js"></script>
 </body>
+
 </html>
